[package]
name = "testground"
version = "0.1.0"
authors = ["Nervos Core Dev <dev@nervos.org>", "Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
redis = "0.16.0"
crossbeam-channel = "0.3"
gethostname = "0.2.1"
