[package]
name = "testground"
version = "0.1.0"
authors = ["Nervos Core Dev <dev@nervos.org>", "Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
redis = "0.16.0"
crossbeam-channel = "0.3"
gethostname = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
backtrace = "0.3.50"

[dev-dependencies]
defer = "0.1.0"
rand = "0.7.3"
tempdir = "0.3.7"
