[package]
name = "placebo"
version = "0.1.0"
authors = ["keroro <keroroxx520@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testground = { git = "https://github.com/keroro520/testground-sdk-rust-public", rev = "ecbb6e03bc4cbae207775cbbe0b0d827aa327180" }
